# ML-Powered_File_Prioritization_Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  master_training_dataset.csv  quick_setup.bat  requirements.txt  temp.md  test_suite_creation.py
datasets/: training_data.csv
datasets/github_code/: high_value_it_secrets.csv  high_value_it_secrets_fixed.csv
datasets/labeled_data/: final_training_dataset_ready.csv  high_signal_set_with_secrets_and_longnoise.csv  high_signal_set_with_secrets_long_noise_dependecy_noise.csv
datasets/m57_csvs/: m57_sample_5k.csv
datasets/merged/: df_sample_5k.csv  df_signal_5k.csv  final_training_dataset_ready.csv  high_signal_training_set_with_secrets.csv  high_value_it_secrets.csv  high_value_it_secrets_fixed.csv  master_dataset_unlabeled_sample_5k.csv
datasets/noise/: dependency_build_noise.csv  long_name_noise.csv
dev/: hyperparameterOptimization.ipynb  testSuite.ipynb
dev/datasets/LLM_generated/: finance_chatGPT.csv  hr_chatGPT.csv
dev/datasets/github_code/: github_sample_1k.csv  high_value_it_secrets.csv  high_value_it_secrets_fixed.csv
dev/datasets/labeled_data/: high_signal_set_with_secrets_and_longnoise.csv  high_signal_set_with_secrets_long_noise_dependecy_noise.csv
dev/datasets/merged/: high_signal_training_set.csv  master_dataset_unlabeled_sample_5k.csv
include/: FileScanner.h  ModelScorer.h  ModelWeights.h
src/: 1.csv  CyberProjectDataset.ipynb  FileScanner.cpp  ModelScorer.cpp  ModelTraining.ipynb  ModelTraining.py  datasetCleaning.ipynb  hyperparameterOptimization.ipynb  main.cpp  testSuite.ipynb  test_suite_creation.py
